--- a/src/components/about-us.ejs
+++ b/src/components/about-us.ejs
@@ -6,28 +6,26 @@
       <div class="col-12">
         <img src="./imgs/about/about-us.jpg" alt="about" class="w-100" />
       </div>
-      <div
-        class="about-item d-flex text-lg-start text-center flex-wrap mt-5 mb-5"
-      >
+      <div class="about-item d-flex text-lg-start text-center flex-wrap mt-5 mb-5">
         <div class="col-lg-4 col-md-6 col-12 ps-1 pe-1 p-2">
           <h4>Who We Are ?</h4>
           <p>
-            Contextual advertising programs sometimes have strict policies that
-            need to be adhered too. Let’s take Google as an example.
+            Contextual advertising programs sometimes have strict policies that need to be adhered too. Let’s take
+            Google as an example.
           </p>
         </div>
         <div class="col-lg-4 col-md-6 col-12 ps-1 pe-1 p-2">
           <h4>Who We Do ?</h4>
           <p>
-            In this digital generation where information can be easily obtained
-            within seconds, business cards still have retained their importance.
+            In this digital generation where information can be easily obtained within seconds, business cards still
+            have retained their importance.
           </p>
         </div>
         <div class="col-lg-4 col-md-6 col-12 ps-1 pe-1 p-2">
           <h4>Why Choose Us</h4>
           <p>
-            A two or three storey house is the ideal way to maximise the piece
-            of earth on which our home sits, but for older or infirm people.
+            A two or three storey house is the ideal way to maximise the piece of earth on which our home sits, but for
+            older or infirm people.
           </p>
         </div>
       </div>
@@ -42,9 +40,7 @@
 <div class="testimonial mb-5">
   <div class="container-fluid p-0">
     <div class="testimonial__pic">
-      <div
-        class="testimonial__text h-100 d-flex justify-content-center flex-column align-items-center"
-      >
+      <div class="testimonial__text h-100 d-flex justify-content-center flex-column align-items-center">
         <span>
           <i class="fa-solid fa-quote-right"></i>
         </span>
@@ -56,11 +52,7 @@
         </p>
         <div class="testimonial_author d-flex align-items-center">
           <div class="testimonial_author_pic">
-            <img
-              src="./imgs/about/testimonial-author.jpg"
-              alt="author"
-              class=""
-            />
+            <img src="./imgs/about/testimonial-author.jpg" alt="author" class="" />
           </div>
           <div class="testimonial_author_text ms-2">
             <h5>Augusta Schultz</h5>
